--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,8 @@
-/* Your styles here */
+body{
+    background-color: #ffffff;
+    color: #393d41;
+    font-size: 1.2rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    interline
+}
+
