--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ section p {
   background-color: #e22d0e;
   color: white;
   margin-top: 4em;
-  padding-top: 2rem;
 }
 
 h2 {
@@ -107,21 +106,26 @@ h2 {
 .images {
   border: 1px solid rgba(132, 132, 132, 0.203);
   margin: 2rem 2rem;
+  border-radius: 0.2em;
+  cursor: pointer;
 }
 
 .images p {
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
+  padding-top: 1rem;
 }
 
 div h4 {
   color: #25a2c3;
   font-weight: bold;
-  padding: 1rem;
+  padding: 2rem 0 0 0;
 }
 
 footer {
   background-color: #25a2c3;
   color: white;
+  margin-top: 4em;
+  font-size: 0.9em;
 }
 
 footer p {
@@ -141,7 +145,7 @@ a {
 }
 
 footer div {
-    padding: 1rem 0 0 0;
+  padding: 1rem 0 0 0;
 }
 
 hr {
@@ -149,7 +153,7 @@ hr {
 }
 
 #copyright {
-    padding: 2rem;
-    padding-bottom: 4rem;
-    font-size: 0.9rem;
+  padding: 2rem;
+  padding-bottom: 4rem;
+  font-size: 0.9rem;
 }
