--- a/css-desktop/style.css
+++ b/css-desktop/style.css
@@ -14,14 +14,17 @@ header img {
 nav {
   background-color: #000000;
 }
+header div p {
+  padding: 0rem 20rem 2rem 20rem;
+}
 
 header div {
   background-image: url(/images/banner.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: top;
   width: 100%;
   height: 100%;
-  padding-bottom: 8rem;
+  padding-bottom: 10em;
   text-align: center;
 }
 
@@ -29,7 +32,7 @@ h1 {
   color: #25a2c3;
   font-size: 2.2rem;
   font-weight: bold;
-  padding: 6rem 0 0 0;
+  padding: 8rem 0 2rem 0;
 }
 
 p {
@@ -46,21 +49,20 @@ button {
   font-size: 1rem;
   cursor: pointer;
 }
-
-main img:first-child {
-  border-radius: 200em;
-  padding: 8em 0 0 8em;
+#laptop {
+  border-radius: 50%;
+  padding-top: 3cm;
+  padding-left: 7cm;
 }
 
-.first-section {
-  display: inline;
-  font-size: 1em;
-}
-
-.first-section p,
-h3 {
+#container p {
   display: inline-block;
-  width: 30%;
+  text-align: left;
+}
+
+#container h3 {
+  display: inline-block;
+  text-align: left;
 }
 
 .red-box {
