--- a/css-desktop/style.css
+++ b/css-desktop/style.css
@@ -61,14 +61,14 @@ button {
   display: inline-block;
   vertical-align: middle;
   width: 50%;
-  padding: 0 15px;
+  padding: 0 6vh;
   box-sizing: border-box;
   font-size: 16px;
   text-align: left;
 }
 
 .colonna-immagine img {
-  width: 100%;
+  width: 80%;
   border-radius: 50%;
   display: block;
 }
@@ -106,8 +106,18 @@ button {
   font-size: 0.8rem;
 }
 
+
 #first-div-img {
-  margin-top: 4rem;
+  margin: 0 0 0 20em;
+}
+
+.container-2 > div {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20%;
+  box-sizing: border-box;
+  font-size: 16px;
+  text-align: center;
 }
 
 .images img {
@@ -116,20 +126,20 @@ button {
 
 .images {
   border: 1px solid rgba(132, 132, 132, 0.203);
-  margin: 2rem 2rem;
+  margin: 2rem;
   border-radius: 0.2em;
   cursor: pointer;
 }
 
 .images p {
-  padding-bottom: 2rem;
-  padding-top: 1rem;
+  padding-bottom: 2em;
 }
+
 
 div h4 {
   color: #25a2c3;
   font-weight: bold;
-  padding: 2rem 0 0 0;
+  padding: 2rem 0 1rem 0;
 }
 
 footer {
