--- a/css-desktop/style.css
+++ b/css-desktop/style.css
@@ -75,9 +75,9 @@ button {
 
 .colonna-testo h3 {
   color: #25a2c3;
-  font-size: 2rem;
+  font-size: 1.3rem;
   font-weight: bold;
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 0rem;
 }
 
 .red-box {
@@ -108,16 +108,22 @@ button {
 
 
 #first-div-img {
-  margin: 0 0 0 20em;
+  margin-left: 5%;
 }
 
-.container-2 > div {
+.nd-container > div{
   display: inline-block;
   vertical-align: middle;
-  width: 20%;
+  width: 30%;
   box-sizing: border-box;
   font-size: 16px;
+  text-align: left;
+  margin-top: 3em;
   text-align: center;
+}
+
+#last-div {
+  margin-right: auto;
 }
 
 .images img {
@@ -126,7 +132,6 @@ button {
 
 .images {
   border: 1px solid rgba(132, 132, 132, 0.203);
-  margin: 2rem;
   border-radius: 0.2em;
   cursor: pointer;
 }
