--- a/css-desktop/style.css
+++ b/css-desktop/style.css
@@ -106,12 +106,11 @@ button {
   font-size: 0.8rem;
 }
 
-
 #first-div-img {
-  margin-left: 5%;
+  margin-left: 30px;
 }
 
-.nd-container > div{
+.nd-container > div {
   display: inline-block;
   vertical-align: middle;
   width: 30%;
@@ -122,24 +121,28 @@ button {
   text-align: center;
 }
 
-#last-div {
-  margin-right: auto;
+.nd-container {
+  padding-top: 2em;
 }
 
 .images img {
   width: 100%;
 }
 
+#last-div img {
+  height: 243.71px;
+}
+
 .images {
   border: 1px solid rgba(132, 132, 132, 0.203);
   border-radius: 0.2em;
   cursor: pointer;
+  margin: 1em;
 }
 
 .images p {
   padding-bottom: 2em;
 }
-
 
 div h4 {
   color: #25a2c3;
